# paper-replication

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  pyproject.toml
.github/workflows/: pre-commit.yml  test.yml
papers/: cli.py  const.py  wandb.py
papers/integrations/: wandb.py
papers/tasks/: base.py
papers/tasks/image/: image.py
papers/tasks/image/classification/: __init__.py  pizza_steak_sushi.py
papers/utils/: data.py  torch.py
papers/vit/: README.md  cli.py  const.py  data.py  model.py  sweep.yaml  trainer.py
papers/vit/blocks/: mlp.py  msa.py  patch_position.py  transformer.py
papers/vit/layers/: patch_embedding.py
papers/vit/models/: base.py  vit_base.py
tests/: conftest.py
tests/test_vit/: conftest.py  test_mlp.py  test_msa.py  test_patch_embedding.py  test_patch_position.py  test_transformer.py  test_vit.py
tests/test_vit/test_layers/: test_patch_embedding.py
